# pdf-img-converter-gui

./: .cruft.json  .pre-commit-config.yaml  README.md  flake.nix  mkdocs.yml  pyproject.toml  tox.ini
.github/: settings.yml
.github/workflows/: checks.yaml  release.yaml
nix/: ci.nix
pdf_img_converter_gui/: __init__.py  app.py  myapp.kv
tests/: test_app.py  test_packaging_attribute.py
