[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pdf-img-converter-gui"
description = "A GUI fot the pdf-img-converter"
version = "0.0.0"
authors = [{name = "Clément Dubos", email = "contact@cdubos.fr"}]
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
    "kivy>=2.3.0",
    "kivymd>=1.2.0",
    "pdf-converter @ git+https://github.com/cdubos-fr/pdf-img-converter",
]

[project.gui-scripts]
pdf-img-converter-gui = "pdf_img_converter_gui.app:run"

[tool.pdm.dev-dependencies]
typing = ["mypy"]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-lazy-fixture",
]
docs = [
    "mkdocs",
    "mkdocs-material",
]

[tool.flit.module]
name = "pdf_img_converter_gui"

[tool.pdm]
distribution = true

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pdf_img_converter_gui.*"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_reexport = true

[tool.ruff]
fix = true
line-length = 100
preview = true
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # Warning
    "W",
    # Mccabe
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-annotations
    "ANN",
    # bandit
    "S",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-future-annotations
    "FA",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # tryceratops
    "TRY",
]
lint.ignore = [
    "ANN101",
    "ANN401",
    "D107",
    "D203",
    "D212",
    "D213",
    "COM812",
]
lint.per-file-ignores."tests/**.py" = [
    "D",
    "S101",
]
lint.isort.force-single-line = true
format.quote-style = "single"
format.docstring-code-format = true
format.preview = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
    "pdf_img_converter_gui/__init__.py"
]
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
